--- a/bookstore-api/Gemfile
+++ b/bookstore-api/Gemfile
@@ -28,8 +28,16 @@ gem 'bootsnap', '>= 1.4.2', require: false
 gem 'active_model_serializers', '0.10.10'
 
 group :development, :test do
+  gem 'rspec-rails', '~> 4.0.1'
+
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+end
+
+group :test do
+  gem 'rails-controller-testing', '1.0.5'
+  gem 'shoulda-matchers', '~> 4.0'
+  gem 'simplecov', '0.19.0', require: false
 end
 
 group :development do
