--- a/bookstore-api/Gemfile
+++ b/bookstore-api/Gemfile
@@ -35,6 +35,7 @@ group :development, :test do
 end
 
 group :test do
+  gem 'database_cleaner-active_record', '1.8.0'
   gem 'rails-controller-testing', '1.0.5'
   gem 'shoulda-matchers', '~> 4.0'
   gem 'simplecov', '0.19.0', require: false
