--- a/bookstore-api/Gemfile
+++ b/bookstore-api/Gemfile
@@ -5,19 +5,8 @@ ruby '2.7.0'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 6.0.3', '>= 6.0.3.3'
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3', '~> 1.4'
 # Use Puma as the app server
 gem 'puma', '~> 4.1'
-# Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
-# gem 'jbuilder', '~> 2.7'
-# Use Redis adapter to run Action Cable in production
-# gem 'redis', '~> 4.0'
-# Use Active Model has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
-
-# Use Active Storage variant
-# gem 'image_processing', '~> 1.2'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.2', require: false
@@ -27,6 +16,7 @@ gem 'bootsnap', '>= 1.4.2', require: false
 
 gem 'active_model_serializers', '0.10.10'
 gem 'octokit', '~> 4.0'
+gem 'pg', '1.2.3'
 
 group :development, :test do
   gem 'rspec-rails', '~> 4.0.1'
@@ -40,6 +30,7 @@ group :test do
   gem 'rails-controller-testing', '1.0.5'
   gem 'shoulda-matchers', '~> 4.0'
   gem 'simplecov', '0.19.0', require: false
+  gem 'sqlite3', '~> 1.4'
 end
 
 group :development do
