--- a/bookstore-app/package.json
+++ b/bookstore-app/package.json
@@ -2,7 +2,7 @@
   "name": "bookstore",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for bookstore goes here",
+  "description": "Bookstore with Rails API and Ember.",
   "repository": "",
   "license": "MIT",
   "author": "",
